[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/GameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/NewGame.gd" type="Script" id=3]
[ext_resource path="res://UI/SaveFile.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/ReturnToMainMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/menu_placeholder_background.png" type="Texture" id=6]

[node name="NewGame" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1067.0
margin_bottom = 600.0
texture = ExtResource( 6 )
expand = true

[node name="NameThemedMarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.245
anchor_right = 0.5
anchor_bottom = 0.245
margin_left = -96.0
margin_top = -43.0
margin_right = 96.0
margin_bottom = 43.0
rect_min_size = Vector2( 192, 86 )
rect_pivot_offset = Vector2( 96, 43 )
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="NameThemedMarginContainer"]
margin_right = 192.0
margin_bottom = 86.0

[node name="MarginContainer" type="MarginContainer" parent="NameThemedMarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 188.0
margin_bottom = 82.0

[node name="VBoxContainer" type="VBoxContainer" parent="NameThemedMarginContainer/PanelContainer/MarginContainer"]
margin_right = 184.0
margin_bottom = 78.0

[node name="Name" type="Label" parent="NameThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 184.0
margin_bottom = 20.0
text = "Enter your name:"

[node name="LineEdit" type="LineEdit" parent="NameThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 184.0
margin_bottom = 54.0

[node name="Instructions" type="Label" parent="NameThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 184.0
margin_bottom = 78.0
text = "Choose a save location:"

[node name="SaveThemedMarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.408
anchor_right = 0.5
anchor_bottom = 0.408
margin_left = -240.0
margin_top = 0.199982
margin_right = 247.0
margin_bottom = 148.2
rect_min_size = Vector2( 481, 110 )
rect_pivot_offset = Vector2( 240, 0 )
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="SaveThemedMarginContainer"]
margin_right = 487.0
margin_bottom = 148.0

[node name="MarginContainer" type="MarginContainer" parent="SaveThemedMarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 483.0
margin_bottom = 144.0

[node name="HBoxContainer2" type="HBoxContainer" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer"]
margin_right = 479.0
margin_bottom = 140.0
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2"]
margin_right = 153.0
margin_bottom = 140.0

[node name="SaveFile1" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 153.0

[node name="SelectSaveFile1" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 106.0
margin_right = 153.0
margin_bottom = 140.0
text = "Select"

[node name="VBoxContainer2" type="VBoxContainer" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2"]
margin_left = 163.0
margin_right = 316.0
margin_bottom = 140.0

[node name="SaveFile2" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 4 )]
margin_right = 153.0
exported_player_id = 2

[node name="SelectSaveFile2" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 106.0
margin_right = 153.0
margin_bottom = 140.0
text = "Select"

[node name="VBoxContainer3" type="VBoxContainer" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2"]
margin_left = 326.0
margin_right = 479.0
margin_bottom = 140.0

[node name="SaveFile3" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer3" instance=ExtResource( 4 )]
margin_right = 153.0
exported_player_id = 3

[node name="SelectSaveFile3" parent="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer3" instance=ExtResource( 2 )]
margin_top = 106.0
margin_right = 153.0
margin_bottom = 140.0
text = "Select"

[node name="ReturnToMainMenu" parent="." instance=ExtResource( 5 )]
anchor_left = 0.117
anchor_top = 0.88
anchor_right = 0.117
anchor_bottom = 0.88
margin_left = -79.808
margin_top = -6.10352e-05
margin_right = 81.192
margin_bottom = 41.9999
rect_pivot_offset = Vector2( 80, 0 )

[node name="ConfirmationMarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.747
anchor_right = 0.5
anchor_bottom = 0.747
margin_left = -80.0
margin_top = -0.200012
margin_right = 81.0
margin_bottom = 41.8
rect_pivot_offset = Vector2( 80, 0 )
theme = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="ConfirmationMarginContainer"]
margin_right = 161.0
margin_bottom = 42.0

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationMarginContainer/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 157.0
margin_bottom = 38.0

[node name="ConfirmationButton" parent="ConfirmationMarginContainer/Panel/MarginContainer" instance=ExtResource( 2 )]
margin_right = 153.0
margin_bottom = 34.0
text = "Confirm"
icon_align = 1

[connection signal="text_changed" from="NameThemedMarginContainer/PanelContainer/MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer/SelectSaveFile1" to="." method="_on_SelectSaveFile1_pressed"]
[connection signal="pressed" from="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer2/SelectSaveFile2" to="." method="_on_SelectSaveFile2_pressed"]
[connection signal="pressed" from="SaveThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2/VBoxContainer3/SelectSaveFile3" to="." method="_on_SelectSaveFile3_pressed"]
[connection signal="pressed" from="ConfirmationMarginContainer/Panel/MarginContainer/ConfirmationButton" to="." method="_on_ConfirmationButton_pressed"]
